# github_trending_cli

./: .gitignore  LICENSE  README.md  pyproject.toml  scratch.py  test.py
.github/workflows/: ci.yml
src/github_trending_cli/: __init__.py  __main__.py  cli.py  client.py  core.py  errors.py  formatters.py  github_api.py  models.py
src/github_trending_cli/archive/: cli.py  core.py  errors.py
tests/: test_client.py  test_core.py  test_github_api_rate_limit.py
