[project]
name = "github-trending-cli"
version = "0.1.0"
description = "GitHub trending repositories CLI and library"
readme = "README.md"
authors = [
    { name = "Yange", email = "posterscofield@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ghtrend = "github_trending_cli.cli:main"

