[project]
name = "github-trending-cli"
version = "0.1.0"
description = "GitHub trending repositories CLI and library"
readme = "README.md"
authors = [
    { name = "Yange", email = "posterscofield@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[project.scripts]
ghtrend = "github_trending_cli.cli:main"

