[project]
name = "github-trending-repos-api"
version = "0.1.1"
description = "GitHub trending repositories CLI and library"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Yange", email = "posterscofield@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[project.scripts]
ghtrend = "github_trending_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/github_trending_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/**", "README.md", "LICENSE", "pyproject.toml"]
